--- a/hangman/index.html
+++ b/hangman/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
     <p id="puzzle"></p>
     <p id="guesses"></p>
+    <button id="reset">Reset</button>
     <script src="requests.js"></script>
     <script src="Hangman.js"></script>
     <script src="app.js"></script>
